# CESAR_Desafio_Tecnico

./: README.md  generate_projects.py  makefile  pyproject.toml  ruff.toml
app/: app.py
app/config/: settings.py
app/dados/: controller.py  inserir.py  projects.py  projects_factory.py  projects_faker.py
app/data/: controller.py  inserir.py
app/database/: session.py
app/graphs/: graph_orcamento_excedido.py  graph_rentabilidade.py  graph_top5_receitas.py
app/models/: projects.py
app/utils/: utils.py
docs/: desafios.md
migrations/: env.py
migrations/versions/: 047cb6f54e24_create_table_projects.py  a82d1a0c1c64_create_projects_table.py
scripts/: generate_projects.py  mais_receita_2_semestre_2024.sql  porcentagem_excedentes.sql  rentabilidade_liquida.sql
streamlit_app/: app.py
tests/e2e/: test_app.py
